fuzzySim v1.6.1 (committed 2015-11-13)
============================================

## Modified functions:

* fuzzyOverlay:
- added arguments 'prop = TRUE' and 'overlay.cols = 1:ncol(data)'
- result now includes 4 (not 8) values, either sum or proportion
- result is now a named vector instead of a list
- 'na.rm' now TRUE by default

* fuzSim: 
- added argument 'na.rm = TRUE'


## Modified help files:

* fuzzyOverlay: modifications reflecting function changes

* modOverlap: example now provided

* fuzzyOverlay, fuzzyRangeChange, modOverlap:
- examples containing 'jitter' corrected to avoid values outside the [0, 1] interval

* fuzSim: 
- examples now provided also for similarity between fuzzy data
- tables of significance for Jaccard and Baroni's indices now referred


============================================
fuzzySim v1.6 (committed 2015-11-03)
============================================

## New functions:

* fuzzyOverlay (calculate row-wise intersection, union, expansion, contraction or consensus among continuous model predictions)

* fuzzyRangeChange (calculate overal loss, gain, and maintenance of favourability between models)


============================================
fuzzySim v1.5 (committed 2015-10-29)
============================================

## New functions:

* corSelect (select among correlated variables based on their bivariate relationship with the response)

* modOverlap (asses the total overlap between model predictions using niche comparison metrics)


## Modified functions:

* multGLM:
- 'corSelect' now included as additional option for variable selection

* FDR:
- AIC now also calculated
- 'model.type' deprecated
- 'family = "auto"' by default
- 'simplif' argument added


============================================
previous edits (that I can remember)
============================================

## Modified functions:

* multicol:
- 'model' argument added (user can provide a model object instead of a set of variables)